# Project-Recovery-Modules

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml
modules/facebook_identity_variants/: README.md  SPEC.md
modules/facebook_identity_variants/examples/facebook_sample/: identity_aliases.json
modules/facebook_identity_variants/examples/facebook_sample/connections/friends/: friends.json
modules/facebook_identity_variants/examples/facebook_sample/logged_information/interactions/: recently_visited_alias.json
modules/facebook_identity_variants/examples/facebook_sample/logged_information/notifications/: notifications.json
modules/facebook_identity_variants/examples/facebook_sample/personal_information/other_personal_information/: emails_we_sent_you.json
modules/facebook_identity_variants/examples/facebook_sample/security_and_login_information/: account_activity.json
modules/facebook_identity_variants/facebook_identity_variants/: __init__.py  batch.py  batch_cli.py  cli.py  extractor.py
modules/facebook_interactions/: QUICKSTART.md  README.md
modules/facebook_interactions/facebook_interactions/: __init__.py  cli.py  extractor.py
modules/facebook_ip_correlation/: README.md  SPEC.md
modules/facebook_ip_correlation/examples/facebook_sample/security_and_login_information/: account_activity.html
modules/facebook_ip_correlation/facebook_ip_correlation/: __init__.py  cli.py  extractor.py
scripts/: verify_public_repo.py
tests/: test_identity_variants.py  test_interactions.py  test_ip_correlation.py
(+16 files in other folders)
