[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "project-recovery-modules"
version = "0.2.0"
description = "Optional analysis modules for the Project Recovery ecosystem."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Project Recovery contributors" }
]
keywords = ["project-recovery", "modules", "facebook", "data-export", "timeline"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities"
]

[project.scripts]
facebook-interactions = "facebook_interactions.cli:main"
facebook-ip-correlation = "facebook_ip_correlation.cli:main"

[tool.setuptools.packages.find]
where = ["modules/facebook_interactions", "modules/facebook_ip_correlation"]
include = ["facebook_interactions*", "facebook_ip_correlation*"]
